prevent dark color contrask on mobile's dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,7 @@
   html {
     color-scheme: dark;
     overscroll-behavior: none;
+    forced-color-adjust: none;
   }
 
   body {
